--- a/product-list/product-list.css
+++ b/product-list/product-list.css
@@ -59,3 +59,63 @@
     margin: 0.5rem auto;
   }
 }
+
+/*아래 코드는 ui수정 css입니다
+현재 문제가 텍스트 형식(한글,영어,숫자)에 따라 한 물품이 등록되는 공간의 높낮이가 달라지며, 한글물품 등록시 사진이 튀어나오게 됩니다,
+그리고 기존 코드와 달리 텍스트 글씨체가 물품 제목 제외하고는 기존과 달라졌습니다
+혹시 보다 깔끔하게 수정하고 싶은데 아직 미숙하여 쉽지 않았습니다...*/
+
+
+/*.header-search-input {*/
+/*  width: 20rem;*/
+/*}*/
+
+/*.navbar-menu .is-info:focus {*/
+/*  outline: none;*/
+/*  box-shadow: none;*/
+/*}*/
+
+/*.product-item-container {*/
+/*  display: flex;*/
+/*  flex-wrap: wrap;*/
+/*  justify-content: flex-start; !* Aligns items to the left *!*/
+/*  gap: 20px; !* Gap between items *!*/
+/*}*/
+
+/*.product-item {*/
+/*  display: flex;*/
+/*  flex-direction: column; !* Stacks items vertically *!*/
+/*  align-items: center; !* Centers items horizontally *!*/
+/*  text-align: center; !* Text centered under the image *!*/
+/*  width: calc((100% - 40px) / 3); !* Adjust width to fit 3 items per row, accounting for the gap *!*/
+/*}*/
+
+/*.product-item .image {*/
+/*  margin-bottom: 1rem; !* Space between the image and text *!*/
+/*  width: 200px; !* Adjust as necessary *!*/
+/*  height: 200px; !* Adjust as necessary *!*/
+/*  display: flex;*/
+/*  justify-content: center;*/
+/*}*/
+
+/*.product-item .image img {*/
+/*  height: 100%; !* Image height matches the container *!*/
+/*  max-width: 100%; !* Prevents the image from exceeding container width *!*/
+/*  object-fit: cover; !* Adjusts the image to cover the container *!*/
+/*}*/
+
+/*@media only screen and (max-width: 768px) {*/
+/*  .product-item-container {*/
+/*    justify-content: center; !* Center items on narrower screens for visual balance *!*/
+/*  }*/
+
+/*  .product-item {*/
+/*    flex-basis: 100%; !* One item per row on narrow screens *!*/
+/*  }*/
+
+/*  .product-item .image {*/
+/*    margin: 0 auto; !* Center the image *!*/
+/*    width: 200px; !* Image width on mobile *!*/
+/*  }*/
+/*}*/
+
