--- a/product-list/product-list.css
+++ b/product-list/product-list.css
@@ -7,6 +7,13 @@
   box-shadow: none;
 }
 
+.image img {
+  margin-top: 10px;
+  display: block;
+  height: auto;
+  width: 100%;
+}
+
 .product-item-container {
   display: flex;
   flex-wrap: wrap;
@@ -20,6 +27,7 @@
   align-items: center; /* Centers items horizontally */
   text-align: center; /* Text centered under the image */
   width: calc((100% - 40px) / 3); /* Adjust width to fit 3 items per row, accounting for the gap */
+  background-color: #f5f5f5;
 }
 
 .product-item .image {
