--- a/admin-orders/admin-orders.css
+++ b/admin-orders/admin-orders.css
@@ -14,6 +14,14 @@
   padding-bottom: 0.7rem;
 }
 
+
+#pagination{
+  margin : 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .heading {
   font-size: 0.8rem;
 }
