--- a/product-detail/product-detail.css
+++ b/product-detail/product-detail.css
@@ -1,6 +1,12 @@
 .header-search-input {
   width: 20rem;
 }
+.dropdown {
+  display: inline-flex;
+  position: relative;
+  vertical-align: top;
+  justify-content: flex-end;
+}
 
 .navbar-menu .is-info:focus {
   outline: none;
